# llm-zoomcamp-coursework

./: .gitignore  README.md  main.py  pyproject.toml
01-agentic-rag/: 01_homework.ipynb  01_module.ipynb  ingest.py  module01.ipynb  rag_helper.py  rag_helper_modified.py
02-vector-search/: 02_homework.ipynb  02_module.ipynb
common/: rag_helper.py
